--- a/doit_html_css_javascript-main/02/index.html
+++ b/doit_html_css_javascript-main/02/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8">
-    <title>웹 개발 입문</title>
+    <title>웹 개발 입문 테스트 파일</title>
   </head>
   <body>
     <h1>웹 개발 기초</h1>
