--- a/doit_html_css_javascript-main/04/video-1.html
+++ b/doit_html_css_javascript-main/04/video-1.html
@@ -22,7 +22,7 @@
       <li>드레싱 재료를 믹서에 갈아줍니다.</li>
       <li>볼에 샐러드 채소와 썰어 둔 레드향, 아보카도, 토마토를 넣고 드레싱을 뿌리면 끝!</li>
     </ol>
-    <video src="medias/salad.mp4" controls width="700"></video>
+    <video src="medias/salad.mp4" autoplay width="700"></video>
     <hr>
     <h2>상품 구성</h2>
     <table>
