열심히 연습중

--- a/doit_html_css_javascript-main/05/t-field.html
+++ b/doit_html_css_javascript-main/05/t-field.html
@@ -16,7 +16,7 @@
       <ul id="shipping">
         <li>
           <label for="user-name">이름 </label>
-          <input type="text" id="user-name">
+          <input type="text" size = "10" id="user-name">
         </li>
         <li>
           <label for="addr">배송 주소</label>
