--- a/doit_html_css_javascript-main/05/register-2.html
+++ b/doit_html_css_javascript-main/05/register-2.html
@@ -19,27 +19,27 @@
           <ul>
             <li>
               <label for="uid">아이디</label>
-              <input type="text" id="uid"> 
+              <input type="text" id="uid" autofocus placeholder="4~10자 사이 공백없이 입력하세요" required> 
             </li>
             <li>
               <label for="umail">이메일</label>
-              <input type="email" id="umail"> 
+              <input type="email" id="umail" required> 
             </li>
             <li>
               <label for="pwd1">비밀번호</label>
-              <input type="password" id="pwd1"> 
+              <input type="password" id="pwd1" required placeholder="문자 숫자, 특수기호 포함 8자 이상"> 
             </li>        
             <li>
               <label for="pw2">비밀번호 확인</label>
-              <input type="password" id="pwd2"> 
+              <input type="password" id="pwd2" required> 
             </li>
           </ul>      
         </fieldset>
         <fieldset>
           <legend>이벤트와 새로운 소식</legend>
-          <input type="radio" name="mailing" id="mailing_y" value="mailing_yes">
+          <input type="radio" name="mailing" id="mailing_y" value="mailing_yes" checked>
           <label for="mailing_y">메일 수신</label>
-          <input type="radio" name="mailing" id="mailing_n" value="mailing_no" checked>
+          <input type="radio" name="mailing" id="mailing_n" value="mailing_no" >
           <label for="mailing_n">메일 수신 안 함</label>     
         </fieldset>
         <div id="buttons">
