--- a/doit_html_css_javascript-main/05/quiz-1.html
+++ b/doit_html_css_javascript-main/05/quiz-1.html
@@ -18,6 +18,26 @@
 </head>
 <body>
 	<h1>예약 정보</h1>
-  /* 05\sol-1.html 소스를 참고하세요. */
+	<form>
+	<ul>
+		<li>
+			<label for="name">이 름</label>
+			<input type="text" id="name">
+		</li>
+		<li>
+			<label for="phone">전 화</label>
+			<input type="tel" id="phone">
+		</li>
+		<li>
+			<label for="mail">이메일</label>
+			<input type="email" id="mail">
+		</li>
+		<li>
+			<button type="submit">예약하기</button>
+		</li>
+	</ul>
+	
+	</form>
+
 </body>
 </html>
