--- a/doit_html_css_javascript-main/05/register-3.html
+++ b/doit_html_css_javascript-main/05/register-3.html
@@ -27,6 +27,19 @@
               <label for="pw2">비밀번호 확인</label>
               <input type="password" id="pwd2" required> 
             </li>
+            <li>
+              <label for="path">가입 경로</label>
+              <select id="path">
+                <option value="blog">블로그</option>
+                <option value="search">검색</option>
+                <option value="sns">SNS</option>
+                <option value="etc">기타</option>
+              </select>
+            </li>
+            <li>
+              <label for="memo">메모</label>
+              <textarea cols="40" rows="4" placeholder="그 외 남기고 싶은 말씀"></textarea>
+            </li>
           </ul>      
         </fieldset>
         <fieldset>
